--- a/src/resources/sass/dashboard.scss
+++ b/src/resources/sass/dashboard.scss
@@ -1,6 +1,6 @@
 
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+// @import url('https://fonts.googleapis.com/css?family=Nunito');
 
 // Variables
 @import 'variables';
@@ -10,6 +10,8 @@
 
 @import '../../../../../../node_modules/startbootstrap-sb-admin-2/scss/sb-admin-2';
 @import '../../../../../../node_modules/datatables.net-bs4/css/dataTables.bootstrap4.css';
+@import 'sidebar';
+
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.09);
@@ -50,4 +52,21 @@ fieldset {
 }
 .img-profile {
     font-size: 32px;
+}
+
+
+.bg-gradient-primary {
+    background-color: #009CDC;
+    background-image: linear-gradient(180deg, #E2E2E2 10%, #c6c6c6 100%);
+    background-size: cover;
+}
+.text-title-section {
+    color: #F8A900;
+    font-size: 30px;
+    font-weight: 600;
+}
+.text-subtitle-section {
+    color: #75737E;
+    font-size: 22px;
+    font-weight: 600;
 }
