--- a/src/resources/sass/dashboard.scss
+++ b/src/resources/sass/dashboard.scss
@@ -11,7 +11,13 @@
 @import '../../../../../../node_modules/startbootstrap-sb-admin-2/scss/sb-admin-2';
 @import '../../../../../../node_modules/datatables.net-bs4/css/dataTables.bootstrap4.css';
 @import 'sidebar';
-
+.navbar-nav {
+    .nav-item {
+        &.active {
+            font-weight: bold;
+        }
+    }
+}
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.09);
