--- a/src/resources/sass/dashboard.scss
+++ b/src/resources/sass/dashboard.scss
@@ -10,6 +10,11 @@
 @import '../../../../../../node_modules/startbootstrap-sb-admin-2/scss/sb-admin-2';
 @import '../../../../../../node_modules/datatables.net-bs4/css/dataTables.bootstrap4.css';
 @import 'sidebar';
+@for $i from 2 through 10 {
+    .flex-grow-#{$i} {
+        flex-grow: $i !important;
+    }
+}
 body {
     height: 100%;
     overflow-x: hidden;
