--- a/src/resources/sass/dashboard.scss
+++ b/src/resources/sass/dashboard.scss
@@ -7,8 +7,8 @@
 // Bootstrap
 //@import '~bootstrap/scss/bootstrap';
 
-@import '../../../../../../node_modules/startbootstrap-sb-admin-2/scss/sb-admin-2';
-@import '../../../../../../node_modules/datatables.net-bs4/css/dataTables.bootstrap4.css';
+@import '~startbootstrap-sb-admin-2/scss/sb-admin-2';
+@import '~datatables.net-bs4/css/dataTables.bootstrap4.css';
 @import 'sidebar';
 @for $i from 2 through 10 {
     .flex-grow-#{$i} {
