--- a/src/resources/sass/_sidebar.scss
+++ b/src/resources/sass/_sidebar.scss
@@ -318,7 +318,7 @@
   }
 }
 $color-dark: #5E5B68;
-$color-orange :#F8A900;
+$color-orange :#B21628;
 // Sidebar Dark
 .sidebar-dark {
   .sidebar-brand {
