--- a/resources/sass/portal/portal.scss
+++ b/resources/sass/portal/portal.scss
@@ -1,8 +1,7 @@
 /*************************** Theme Colours****************************/
 // Define theme colour scheme
-$theme-color-primary: #1540a3;
-//background: #d8d8ff;
-//color: #1540a3;
+$theme-color-primary: #280e6d;
+
 $theme-text-color-primary: #252930;
 $theme-text-color-secondary: lighten($theme-text-color-primary, 25%);
 $theme-text-color-light: lighten($theme-text-color-primary, 40%);
