--- a/src/resources/sass/_sidebar.scss
+++ b/src/resources/sass/_sidebar.scss
@@ -176,7 +176,7 @@
           display: inline;
         }
         // Accordion Arrow Icon
-        &[data-toggle="collapse"] {
+        &[data-bs-toggle="collapse"] {
           &::after {
             width: 1rem;
             text-align: center;
@@ -245,7 +245,7 @@
           i {
             margin-right: 0;
           }
-          &[data-toggle="collapse"]::after {
+          &[data-bs-toggle="collapse"]::after {
             display: none;
           }
         }
@@ -293,7 +293,7 @@
         }
       }
       // Accordion
-      &[data-toggle="collapse"]::after {
+      &[data-bs-toggle="collapse"]::after {
         color: $gray-500;
       }
     }
@@ -345,7 +345,7 @@ $color-orange :#B21628;
         }
       }
       // Accordion
-      &[data-toggle="collapse"]::after {
+      &[data-bs-toggle="collapse"]::after {
         color: fade-out($color-dark, 0.5);
       }
     }
