--- a/src/resources/sass/dashboard.scss
+++ b/src/resources/sass/dashboard.scss
@@ -215,3 +215,13 @@ a.paginate_button {
     bottom: 0;
     display: flex;
 }
+
+button.badge {
+    border: none;
+    &:active {
+        background-color: #e08f01 !important;
+    }
+}
+.text-right {
+    text-align: right !important;
+}
