fixed error in User model

--- a/src/resources/sass/dashboard.scss
+++ b/src/resources/sass/dashboard.scss
@@ -225,3 +225,7 @@ button.badge {
 .text-right {
     text-align: right !important;
 }
+.table-column-fitted {
+    width: 1px;
+    white-space: nowrap;
+}
