--- a/src/resources/sass/dashboard.scss
+++ b/src/resources/sass/dashboard.scss
@@ -239,3 +239,7 @@ button.badge {
     align-items: center;
     background: linear-gradient(to bottom, #f8f9fa 0%, #e9ecef 100%);
 }
+
+.highlight {
+    font-weight: bold;
+}
